# SubjuGator

./: .gitignore  README  README.md  bashrc
actuator_driver/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
actuator_driver/msg/: Switches.msg
actuator_driver/scripts/: actuator_driver  actuator_driver_dummy
actuator_driver/srv/: PulseValve.srv  SetValve.srv
adis16400_imu/: CMakeLists.txt  mainpage.dox  manifest.xml  nodelet.xml  package.xml
adis16400_imu/include/adis16400_imu/: driver.h
adis16400_imu/src/: nodelet.cpp
auvsi_robosub/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml  setup.py
auvsi_robosub/models/: .gitignore  README  path.mtl  shooter.blend  transdec.blend  transdec.mtl  transdec.txt
auvsi_robosub/models/2012/: path.blend  path.mtl  shooter.blend
auvsi_robosub/models/2012_uf_mock/: path.blend  path.mtl  shooter.blend  shooter.mtl  widget.blend
auvsi_robosub/models/2013/: 12in_hexagon.blend  7in_hexagon.blend  gate.blend  gate.mtl  manipulation.blend  manipulation.mtl  manipulation_lever.blend  manipulation_lever.mtl  manipulation_wheel.blend  manipulation_wheel.mtl  path.blend  pizzabox.mtl  shooter.blend  shooter.mtl  shooter_12in_red_hexagon.mtl  shooter_7in_blue_hexagon.blend  shooter_7in_blue_hexagon.mtl  shooter_7in_green_hexagon.blend  shooter_7in_green_hexagon.mtl  shooter_7in_red_hexagon.mtl  shooter_7in_yellow_hexagon.blend  shooter_7in_yellow_hexagon.mtl  shooter_with_holes.blend  shooter_with_holes.mtl
auvsi_robosub/models/2013_uf_mock/: bin.blend  bin.mtl
auvsi_robosub/models/2014/: PowerPeg.blend  PowerPeg.mtl  PowerPeg_vision.blend  PowerPeg_vision.mtl  buoy_test.blend  buoy_test.mtl  collectionSite.blend  collectionSite.mtl  maneuvering.blend  maneuvering.mtl  maneuvering_vision.blend  maneuvering_vision.mtl  manuvering_vision.mtl  moonRock.blend  moonRock.mtl  reroutePowerBoard.blend  reroutePowerBoard.mtl  reroutePowerBoard_cell.blend  reroutePowerBoard_cell.mtl  shooter2014.blend  shooter2014.mtl  shooter2014v2.blend  shooter2014v2.mtl  shooter2014v3.blend  shooter2014v3.mtl
auvsi_robosub/scripts/: mission_planner  run_missions
auvsi_robosub/src/auvsi_robosub/: constants.py  missionconfigs.py  subjugator_states.py
auvsi_robosub/src/auvsi_robosub/missions/: __init__.py  bins.py  buoy.py  hedge.py  (+11 more)
battery_driver/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
battery_driver/firmware/: Makefile  firmware.cpp  stm32f103.ld
depth_driver/: CMakeLists.txt  mainpage.dox  manifest.xml  nodelet.xml  package.xml
depth_driver/include/depth_driver/: driver.h
depth_driver/scripts/: fake_depth
depth_driver/src/: nodelet.cpp
embedded_protocol/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml  setup.py
embedded_protocol/launch/: embedded.launch
embedded_protocol/src/embedded_protocol/: embedded.py  kill_switch.py
merge_driver/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
merge_driver/scripts/: merge_driver
sub8_motor_driver/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
sub8_motor_driver/bootloader/: Makefile  bootloader.cpp  script.ld
sub8_motor_driver/firmware/: Makefile  firmware.cpp  hbridge.cpp  hbridge.h  protocol.h  script.ld  temperature.cpp  temperature.h  time.cpp  time.h
sub8_motor_driver/src/: sub8_motor_driver.cpp  test_kalman.cpp
sub8_vision/: CMakeLists.txt  package.xml
sub8_vision/include/: vision_tools.h
sub8_vision/launch/: rr_tracks.launch  sub8_vision.launch
sub8_vision/nodes/: green_buoy.py  recovery_vision.cpp  torpedo_vision.py
sub8_vision/src/: vision_tools.cpp
sub8_vision/sub8_vision/: CMakeLists.txt  package.xml
sub8_vision/sub8_vision/include/: vision_tools.h
sub8_vision/sub8_vision/launch/: rr_tracks.launch  sub8_vision.launch
sub8_vision/sub8_vision/nodes/: align_test.py  green_buoy.py  portal_vision.cpp  recovery_vision.cpp  red_marker.py  rr_track_locator.cpp  torpedo_vision.py  torpedo_vision_area.py  yellow_upright.py
sub8_vision/sub8_vision/src/: vision_tools.cpp
sub8_vision/sub8_vision_arbiter/: CMakeLists.txt  README.md  package.xml
sub8_vision/sub8_vision_arbiter/msg/: vision_arbiter.msg
sub_launch/: CMakeLists.txt  README.md  mainpage.dox  manifest.xml  package.xml  setup.py
sub_launch/launch/: Cal-UI124xSE-C-2-4002885292.txt  cameras.launch  cameras_pgr.launch  common.xml  down_cal.txt  down_camera_calibration.yaml  forward_cal.txt  forward_camera_calibration.yaml  leaksensor.launch  rise_6dof.yaml  run.launch  sonar_driver.yaml  thruster_driver_FLV.yaml  thruster_driver_FRV.yaml  thruster_driver_FS.yaml  thruster_driver_LFOR.yaml  thruster_driver_RFOR.yaml  thruster_driver_RLV.yaml  thruster_driver_RRV.yaml  thruster_driver_RS.yaml  ueye_down_camera.yaml  ueye_forward_camera.yaml  vision.launch
sub_launch/scripts/: bag_to_csv  barrel_roll  bashrc  bins  bump_buoy  camera_views  debug_images  depth_conn  dvl_conn  get_pose  get_power  grid_pattern  imu_conn  kill  legacy_debug_images  manipulation  manipulation_wheel  newshooter  newshooter_stage2  odom_to_euler  param_saver  path  paths  plot_angle  plot_coordinate  record  send_waypoint  shooter  show_color  widget
sub_vision/: CMakeLists.txt  README.md  package.xml  underwater_vehicle_prop_recognition_flood_fill.cpp
sub_vision/include/: vision_tools.h
sub_vision/nodes/: recovery_vision.cpp  red_marker.py  torpedo_vision.py
sub_vision/src/: vision_tools.cpp
subsim/: CMakeLists.txt  README.md  manifest.xml  package.xml  setup.py
subsim/launch/: run.launch  thruster_driver_FLV.yaml  thruster_driver_FRV.yaml  thruster_driver_FS.yaml  thruster_driver_LFOR.yaml  thruster_driver_RFOR.yaml  thruster_driver_RLV.yaml  thruster_driver_RRV.yaml  thruster_driver_RS.yaml
subsim/scene/: pool6.blend
subsim/scripts/: depth_conn  dvl_conn  paulboard_conn  sim  start_io
subsim/src/subsim/: devices.py  threed.py  vector.py
thruster_driver/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml  setup.py
thruster_driver/scripts/: do_all_calibration  thruster_driver
thruster_driver/src/thruster_driver/: embedded.py  util.py
(+89 files in other folders)
