<package>
  <name>battery_driver</name>
  <version>1.0.0</version>
  <description>battery_driver</description>
  <maintainer email="matthewbot@gmail.com">Matt Thompson</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/battery_driver</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Matt Thompson</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>libopencm3</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>libopencm3</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>libopencm3</test_depend> -->

</package>