<package>
  <name>sub8_motor_driver</name>
  <version>1.0.0</version>
  <description>sub8_motor_driver</description>
  <maintainer email="forrest@forre.st">Forrest Voight</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/sub8_motor_driver</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Forrest Voight</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>odom_estimator</build_depend>
  <build_depend>libopencm3</build_depend>
  <build_depend>arm_bootloader</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>odom_estimator</run_depend>
  <run_depend>libopencm3</run_depend>
  <run_depend>arm_bootloader</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>odom_estimator</test_depend> -->
  <!-- <test_depend>arm_bootloader</test_depend> -->
  <!-- <test_depend>libopencm3</test_depend> -->

</package>