<package>
  <name>sub_vision</name>
  <version>1.0.0</version>
  <description>sub_vision</description>
  <maintainer email="zach.a.goins@gmail.com">Zach Goins</maintainer>

  <license>BSD</license>

  <!-- <url type="bugtracker"></url> -->

  <author>Zach Goins</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>sub_launch</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>cv_bridge</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>sub_launch</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>opencv2</run_depend>
  <run_depend>cv_bridge</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>sub_launch</test_depend> -->
  <!-- <test_depend>hydrophones</test_depend> -->
  <!-- <test_depend>sim</test_depend> -->

</package>
