<package>
  <name>subsim</name>
  <version>1.0.0</version>
  <description>subsim</description>
  <maintainer email="forrest@forre.st">Forrest Voight</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/subsim</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Forrest Voight</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>sub_launch</build_depend>
  <build_depend>sim</build_depend>
  <build_depend>hydrophones</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>sub_launch</run_depend>
  <run_depend>sim</run_depend>
  <run_depend>hydrophones</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>sub_launch</test_depend> -->
  <!-- <test_depend>hydrophones</test_depend> -->
  <!-- <test_depend>sim</test_depend> -->

</package>