<package>
  <name>sub8_vision_arbiter</name>
  <version>1.0.0</version>
  <description>sub8_vision_arbiter</description>
  <maintainer email="zach.a.goins@gmail.com">Zach Goins</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/actuator_driver</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Zach Goins</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>message_generation</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>std_msgs</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>message_generation</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>kill_handling</test_depend> -->
  <!-- <test_depend>std_msgs</test_depend> -->

</package>